src/test/deca/context/valid/test_oparith_float_int.deca
// Description:
//    affectation et op arith reussi
//
// Resultats:
//    a = 7.0
//
// Historique:
//    cree le 01/01/2024

{
   float a = 42.0 / 6 ;
}
