src/test/deca/context/invalid/wobj/test_affect_incompatible_int.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
// 
// Historique:
//    cree le 01/01/2024

{
   int a = 1;
   float b = 1.5;

   // Doit etre refuse.
   a = b;
}
